# Duolingo-Word-of-the-Day

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.sh  build_armv7.sh
.cargo/: config
src/: Untitled-1.jsonc  api.rs  main.rs
