[package]
name = "duolingo-word-of-the-day"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "blocking", "json", "multipart"]}
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
rand = "0.8.4"
rppal = { version = "0.13.1", features = ["hal-unproven"] }
epd-waveshare = "0.5.0"
embedded-graphics = "0.7"
display-interface = "0.4"
display-interface-spi = "0.4"
